# finops-mcp-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py
.kiro/settings/: mcp.json
finops/: __init__.py  core.py  pricing.py  report.py
finops/scanners/: __init__.py  aiml.py  compute.py  database.py  migration.py  networking.py  storage.py
