[project]
name = "finops-mcp-agent"
version = "2.0.0"
description = "MCP server for AWS FinOps cost optimization analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{name = "Sparsh Khandelwal"}]
keywords = ["aws", "finops", "cost-optimization", "mcp", "cloud"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]==1.9.3",
    "openpyxl==3.1.5",
    "boto3==1.38.25",
]

[project.scripts]
finops-mcp = "server:main"

[project.urls]
Homepage = "https://github.com/sparsh-khandelwal/finops-mcp-agent"
Repository = "https://github.com/sparsh-khandelwal/finops-mcp-agent"
Issues = "https://github.com/sparsh-khandelwal/finops-mcp-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finops"]

[tool.hatch.build.targets.wheel.force-include]
"server.py" = "server.py"
